Fixed issue wth menu buttons wrapping around on mobile devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -411,7 +411,7 @@ input[name='q']::placeholder {
       height: calc(100vh - 116px);
   }
 
-  .display-4.logo-font.text-dark {
+  .display-4.logo-font.text-black {
       font-size: small;
   }
 
